# Bus_Booking_System

./: .env.example  .gitignore  POSTMAN_API_GUIDE.md  POSTMAN_PAYMENTS_GUIDE.md  README.md  init_db.sql  init_db_new.sql  init_db_old.sql  pyproject.toml  script.sql
REHEARTEN/: settings.py  urls.py
accounts/: admin.py  backends.py  db_utils.py  forms.py  models.py  process_login_gg.py  session_model.py  user_model.py  utils.py  views.py
accounts/management/commands/: list_users.py
accounts/migrations/: 0001_initial.py  0002_alter_usersession_user.py
bookings/: models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
migrations/: allow_guest_bookings.sql
payments/: models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py
static/css/: rehearten.css
templates/accounts/: base.html  home.html
templates/transport/: admin_trips.html  booking_confirmation.html  my_bookings.html  trip_detail.html  trip_list.html
transport/: models.py  serializers.py  urls.py  urls_frontend.py  views.py  views_frontend.py
transport/migrations/: 0001_initial.py
utils/: __init__.py  db_utils.py
